--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,7 +1,7 @@
 .about{
    
  
-    background-color:white;
+    background-color:gray;
   display: flex;
   background-repeat: no-repeat;
   background-size: cover;
@@ -10,7 +10,7 @@
   justify-content: center;
    
   .container {
-    background-color: white;
+    background-color: yellow;
      flex:2;
     text-align: center; 
     height: 80%;
@@ -36,23 +36,7 @@
     
  }
     
-    #s {
-        border: 10px solid white;
-        border-bottom: 10px solid white;
-        transform: rotateY(-10deg);
 
-        position: relative;
-        font-weight: bold;
-        font-size: 100px;
-       color: black;
-        display: inline-block;
-        height:100%;
-        width: 100%;
-        border-color: black;
-        border-width:3px;
-        padding-bottom: 100px;
-     
-    }
     
     .right{
         width: 100%;
@@ -78,36 +62,36 @@
         justify-content: center;
         align-items:center;
        
-        .imageContainer{
-            flex: 0;
-            width: 100%;
-            height: 100%;
-            margin:0;
-            padding: 0;
-            justify-content: center;
-
-         
-       
-      
-    }
+        
     .content{
        // background-color: rgb(206, 228, 206);
       
         flex:3;
-        margin-top: 80px;
-        margin-left: 40px;
+       
         
        
         height: 100%;
-        width: 90%;
+        width: 100%;
         border-radius: 10% 10% 10% 10%;
         border-bottom-left-radius: 30%;
         
        
        
         p{
+            img{
+                float: left;
+                height: 20%;
+                width: 20%;
+                transform:rotate(-5deg);
+                margin-right: 5px;
+                margin-bottom: 5px;
+                margin-left: 0px;
+                margin-top:0px;
+                padding: 0;
+
+            }
             
-            color: crimson;
+            color: yellow;
            font-size: 18px;
            font-family: 'Courgette', cursive;;
            line-height: 1.6;
@@ -123,7 +107,7 @@
     }
     .bottom{
         border-radius: 10% 10% 10% 10% ;
-      background-color: white;
+      background-color: yellow;
 
         margin-top: 20px;
 
