--- a/src/components/Testimonials/testimonials.scss
+++ b/src/components/Testimonials/testimonials.scss
@@ -7,6 +7,10 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+  
+    @include mobile{
+        background-color: crimson;
+    }
 
     h1{
         font-size: 50px;
@@ -15,6 +19,13 @@
         }
     }
     .container{
+        @include mobile{
+            flex-direction: column;
+            border-radius: 0px 0px;
+            flex-wrap: nowrap;
+            overflow-y: scroll;
+          
+        }
       
      
         width:100%;
@@ -25,6 +36,7 @@
         flex-direction: row;
         @include mobile{
             flex-direction: column;
+
             justify-content: center;
             
         }
@@ -44,29 +56,60 @@
             transition: all 1s ease;
             @include mobile{
                 width: 200px;
-             
-                border-radius: 5px;
+                height: 100%;
+                padding: 0px;
+                border:3px 3px solid black;
+                
+                margin: 3px;
+                
+              
+                border-radius: 0px;
+
                 box-shadow: 0px 0px 5px -5px black;
+
             }
 
+
             .top{
+
                 display: flex;
                 flex-direction: column;
                 align-items: center;
                 justify-content: center;
+                @include mobile{
+                    h3{
+                        font-size: 12px;
+                        font-weight: 600;
+                        margin-top: 3px;
+                        margin-bottom: 4px;
+                        padding: 0px;
+                    }
+                    h2{
+                        margin-left: 4px;
+                        font-size: 11px;
+                        font-weight: 600;
+                        margin-bottom: 4px;
+                        padding: 0px;
+                    }
+                }
                 .topimages{
                     display: flex;
                     flex-direction: row;
                     align-items: center;
                     justify-content: center;
+                    @include mobile{
+                        display: none;
+                    }
 
                 img{
+                    @include mobile{
+                            
+                        display: none;
+
+                    }
                   &.right{
                         height: 100px;
-                        @include mobile{
-                            height: 40px;
-
-                        }
+                       
                          
                     }
                     &.user{
@@ -92,11 +135,16 @@
                
                 background-color: rgb(236, 223, 226);
                 border-radius: 10px;
+                overflow-y: scroll;
                 
                 font-weight: bold;
                 @include mobile{
+                    margin-top: 8px;
                   font-size: 12px;
-                  padding: 5px;
+                  padding: 3px;
+                  font-weight: 300;
+
+                
                 }
 
             }
@@ -106,15 +154,22 @@
                 justify-content: center;
                 flex-direction: column;
                 h3{
+                    display: none;
                     margin-bottom: 5px;
+                    font-size: 13px;
                     
                 }
                 h4{
                     color: grey;
+                    font-size: 13px;
+                   
                 }
             }
             &:hover{
                transform:  scale(1.1);
+               @include mobile{
+                   transform: none;
+               }
             }
 
         }
