--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -14,6 +14,7 @@
         font-size: 50px;
         @include mobile{
             font-size: 20px;
+            margin-top: 10px;
         }
     }
     ul{
